[package]
name = "kfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]
bench = false

[dependencies]
multiboot2 = { version = "0.23.0", default-features = false }

[build-dependencies]
bindgen = "0.70.1"
cbindgen = "0.27.0"
