[package]
name = "kfs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]
bench = false

# [build-dependencies]
# bindgen = "0.69.4"

[lints.rust]
dead_code = "allow" # Sir, this is a kernel, please fuck off
unused_macros = "allow" # Sir, this is a kernel, please fuck off
